# bluefinctl

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  renovate.json
.agents/skills/bluefinctl-dev/: SKILL.md
.agents/skills/run/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
Formula/: bluefinctl.rb
docs/: DESIGN.md  SKILL.md  UPDATES.md
docs/adr/: 0001-smart-reboot-strategies.md
docs/agents/: domain.md  issue-tracker.md
docs/skills/: INDEX.md  ai-stacks.md  gap-tracker.md  homebrew-packaging.md  human-gates.md  skill-improvement.md  textual-dev.md
src/bluefinctl/: __init__.py  __main__.py  app.py  cli.py  commands.py
src/bluefinctl/core/: ai.py  brew.py  bundles.py  devmode.py  flatpak.py  notify.py  operations.py  progress.py  system.py  update_app.py  update_runner.py  updates.py
src/bluefinctl/screens/: __init__.py  _modals.py  _sidebar.py  _viewswitcher.py  ai.py  bundles.py  containers.py  dashboard.py  devmode.py  packages.py  system.py  toolkit.py  updates.py
src/bluefinctl/stacks/amd/lemonade/: stack.env  (+2 more)
src/bluefinctl/theme/: __init__.py  accent.py  bluefin.tcss
src/bluefinctl/util/: __init__.py  ghostty.py  osc.py  terminal.py
src/bluefinctl/widgets/: __init__.py  adw.py  changelog.py  log_view.py  operation_modal.py  ops_bar.py  rollback_calendar.py  segmented_progress.py
tests/: test_ai.py  test_app_acceptance.py  test_bundles.py  test_cli.py  test_commands.py  test_devmode.py  test_operations.py  test_progress.py  test_rebase.py  test_reboot_strategy.py  test_update_app.py  test_update_runner.py
(+28 files in other folders)
