[project]
name = "bluefinctl"
version = "0.2.1"
description = "TUI control panel for Bluefin OS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Project Bluefin", email = "info@projectbluefin.io" },
]
keywords = ["bluefin", "tui", "textual", "immutable-os", "bootc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "textual>=8.2",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
ai = [
    "textual-ai>=0.1",
]

[project.scripts]
bluefinctl = "bluefinctl.cli:app"
bctl = "bluefinctl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluefinctl"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "COM", "C4", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "ARG", "ERA"]
ignore = ["S607", "S603", "COM812", "SIM117", "A002", "S110", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
